@@ -69,7 +69,8 @@ local AQMAXINSTANCES = "68"
 local AQMAXQUESTS = "19"
 
 -- Set title for AtlasQuest side panel
-ATLASQUEST_VERSION = ""..BLUE.."AtlasQuest 4.1.3";
+AQ_VERSION = "AtlasQuest 4.1.3";
+AQVERSION = ""..BLUE.."AtlasQuest 4.1.3";
 
 AQ_ShownSide = "Left"
 AQAtlasAuto = 1;
@@ -149,7 +150,7 @@ end
 function AQVersionCheck()
  if (AtlasQuest_Options["Version"] == nil or AtlasQuest_Options["Version"] ~= AtlasQuest_Defaults["Version"] ) then
    AtlasQuest_Options["Version"] = AtlasQuest_Defaults["Version"];
-   DEFAULT_CHAT_FRAME:AddMessage("First load after updating to "..ATLASQUEST_VERSION);
+   DEFAULT_CHAT_FRAME:AddMessage("First load after updating to "..AQVERSION);
  end
 end
 
@@ -245,7 +246,7 @@ function AQSetButtontext()
       STORYbutton:SetText(AQStoryB);
       OPTIONbutton:SetText(AQOptionB);
       AQOptionCloseButton:SetText(AQ_OK);
-      AtlasQuestTitle:SetText(ATLASQUEST_VERSION);
+      AtlasQuestTitle:SetText(AQVERSION);
       AQCaptionOptionTEXT:SetText(AQOptionsCaptionTEXT);
       AQAutoshowOptionTEXT:SetText(AQOptionsAutoshowTEXT);
       AQLEFTOptionTEXT:SetText(AQOptionsLEFTTEXT);
