@@ -4,11 +4,12 @@ Changelog
 
 Version 4.1.3
 
+- Can now link to quests in the chat window by Shift + Clicking on the quest in the AtlasQuest window. Not all instances supported yet. Just Deadmines & Wailing Caverns.
 - Changed text color for "Options" menu to match rest of Atlas/AtlasQuest. (Suggested by Telchar)
 - Made "Story" button larger so German text isn't bigger than the button. (Suggested by Telchar)
 - Moved "AtlasQuest" button in the AtlasFrame to same level as Atlas' "Options" button. (Suggested by Telchar)
 - AtlasQuest side panel will no longer disappear when Atlas changes to an unsupported map, such as Entrances, Flight paths, etc. (Suggested by Telchar)
-- Fixed BRD Horde quests "Heart of the Mountain" and "A Taste of Flame".
+- Fixed BRD Horde quests "Heart of the Mountain" and "A Taste of Flame". (Reported by Vytae)
 - German localization updates by Telchar.
 
 - Quests added:
